# Henry-Stickmin

./: LICENSE  pyproject.toml
henry_discord_bot/: bot.py
henry_discord_bot/extensions/: ping.py
henry_discord_bot/extensions/maths/: equation.py
tests/: test_henry_discord_bot.py
